--- a/free-pos-server/qml.qrc
+++ b/free-pos-server/qml.qrc
@@ -5,5 +5,9 @@
         <file>MenuView.qml</file>
         <file>RectangleFlash.qml</file>
         <file>RectangleFlashButton.qml</file>
+        <file>EditCustomerDialog.qml</file>
+        <file>EditOrderItemDialog.qml</file>
+        <file>EditCurrentRecDialog.qml</file>
+        <file>DialogModal.qml</file>
     </qresource>
 </RCC>
