Implementing weekly sales and costs

--- a/free-pos-server/qml.qrc
+++ b/free-pos-server/qml.qrc
@@ -18,5 +18,6 @@
         <file>InventoryItems.qml</file>
         <file>MenuCategoriesView.qml</file>
         <file>MenuItemsView.qml</file>
+        <file>WeeksView.qml</file>
     </qresource>
 </RCC>
