Added actualTax to costs and charts

--- a/free-pos-server/qml.qrc
+++ b/free-pos-server/qml.qrc
@@ -21,5 +21,6 @@
         <file>WeeksView.qml</file>
         <file>RecSummaryView.qml</file>
         <file>EmployeeShiftsView.qml</file>
+        <file>EmployeeShiftsEdit.qml</file>
     </qresource>
 </RCC>
