Implementing EmployeeShiftsSummary, currently broken

--- a/free-pos-server/qml.qrc
+++ b/free-pos-server/qml.qrc
@@ -22,5 +22,6 @@
         <file>RecSummaryView.qml</file>
         <file>EmployeeShiftsView.qml</file>
         <file>EmployeeShiftsEdit.qml</file>
+        <file>EmployeeShiftsByWeek.qml</file>
     </qresource>
 </RCC>
