Implementing LoyaltyMemeber system. Add SMS text of reconciliation closing numbers to managers.

--- a/free-pos-server/qml.qrc
+++ b/free-pos-server/qml.qrc
@@ -23,5 +23,6 @@
         <file>EmployeeShiftsView.qml</file>
         <file>EmployeeShiftsEdit.qml</file>
         <file>EmployeeShiftsByWeek.qml</file>
+        <file>LoyaltyMemberSelect.qml</file>
     </qresource>
 </RCC>
