Added alert sound and dialog when order fails to send to kitchen.

--- a/free-pos-server/qml.qrc
+++ b/free-pos-server/qml.qrc
@@ -24,5 +24,6 @@
         <file>EmployeeShiftsEdit.qml</file>
         <file>EmployeeShiftsByWeek.qml</file>
         <file>LoyaltyMemberSelect.qml</file>
+        <file>airhorn.wav</file>
     </qresource>
 </RCC>
